--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://jasjappan.github.io/Memegen",
+  "homepage": "http://jasjappan.github.io/MemeGen",
   "name": "memegen",
   "version": "0.1.0",
   "private": true,
